fix: microservice communication
Took 1 hour 39 minutes